--- a/pom.xml
+++ b/pom.xml
@@ -170,22 +170,25 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>com.heroku.sdk</groupId>
-                <artifactId>heroku-maven-plugin</artifactId>
-                <version>3.0.4</version>
-                <configuration>
-                    <appName>heroku-demo-stackabuse</appName>
-                    <includeTarget>false</includeTarget>
-                    <includes>
-                        <include>${project.build.directory}/${project.build.finalName}.jar</include>
-                    </includes>
-                    <jdkVersion>1.8</jdkVersion>
-                </configuration>
-            </plugin>
 
 
-			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<configuration>
+							<excludedGroups>switch-enabled</excludedGroups>
+						</configuration>
+					</execution>
+				</executions>
+
+			</plugin>
+
+
 		</plugins>
 	</build>
 	
