--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.rest.base-path=/api
 
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=jumia
 
